--- a/.github/workflows/publish-hc.yml
+++ b/.github/workflows/publish-hc.yml
@@ -2,10 +2,6 @@ name: Build and Publish Handheld Companion
 
 on:
   workflow_dispatch:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
 
@@ -15,9 +11,10 @@ jobs:
 
     env:
       Solution_Name: ControllerService.sln
+      INNO_VERSION: 6.2.1
 
     steps:
-    
+
     # Checkout project
     - name: Checkout
       uses: actions/checkout@v3
@@ -29,7 +26,7 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
-    
+
     # Setup NuGet and run Restore
     - name: Setup NuGet
       uses: nuget/setup-nuget@v1
@@ -44,48 +41,26 @@ jobs:
     # Build ControllerService project
     - name: Build Project
       run: msbuild $env:Solution_Name /p:Configuration=Release
-    
-    - name: Upload Built Project Artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: built-project
-        path: ./
-      
-  publish:
-    name: Publish Artifacts
-    runs-on: windows-latest
-    needs: build
-    
-    env:
-      INNO_VERSION: 6.2.1
-    
-    steps:
-    
-    # Fetch built project
-    - name: Fetch Built Project Artifact
-      uses: actions/download-artifact@v2
-      with:
-        name: built-project
-        
+
     # Download Inno Setup
     - name: Download Inno Setup installer
-      run: curl -L -o installer.exe http://files.jrsoftware.org/is/6/innosetup-${{ env.INNO_VERSION }}.exe
-      
+      run: curl -L -o ./installer.exe http://files.jrsoftware.org/is/6/innosetup-${{ env.INNO_VERSION }}.exe
+
     # Install Inno Setup
     - name: Install Inno Setup
       run: ./installer.exe /verysilent /allusers /dir=inst
-      
+
     # Create Installers
     - name: Create Installer
       run: |
           "%programfiles(x86)%\Inno Setup 6\iscc.exe" "ControllerService.iss"
       shell: cmd
-      
+
     - name: Create Offline Installer
       run: |
           "%programfiles(x86)%\Inno Setup 6\iscc.exe" "ControllerService-offline.iss"
       shell: cmd
-    
+
     # Upload install file artifacts
     - name: Upload Installs Artifact
       uses: actions/upload-artifact@v3
