--- a/.github/workflows/publish-hc.yml
+++ b/.github/workflows/publish-hc.yml
@@ -42,17 +42,13 @@ jobs:
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v1.0.2
 
-    # Build ControllerService project
-    - name: Build Project
-      run: msbuild $env:Solution_Name /p:Configuration=Release
-
     # Build ControllerService solution
     - name: Build Project
       run: msbuild $env:Solution_Name /p:Configuration=Release
 
     # Build ControllerService project
     - name: Build Project
-      run: msbuild $env:Solution_Name /t:ControllerService /p:Configuration="Release"
+      run: msbuild $env:Solution_Name /t:ControllerService:rebuild /p:Configuration="Release"
 
     # Download Inno Setup
     - name: Download Inno Setup installer
